auto_branch_pushes/sungbin/sec-fix/ppluto-main/overlays/dev_gcp/deployment.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: ppluto-main
spec:
  selector:
    matchLabels:
      app: ppluto-main
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: ppluto-main
    spec:
      terminationGracePeriodSeconds: 1800 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-client
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client:c2306be1e4c0d20c8961bc003a65b5f0020d62365091a32348cb8eaf10b5f246
          ports:
            - containerPort: 8003
            - containerPort: 8004
          resources:
            # requests:
            #   cpu: 100m
            #   memory: 10Mi
            limits:
              cpu: 200m
              memory: 100Mi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-client-tickerbell
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client-tickerbell:9641fd6a97cf3cf44c6e38e02c6e5f3b0a93f9825312028237f5b97ab8423d44
          ports:
            - containerPort: 5080
          readinessProbe:
            httpGet:
              port: 5080
              path: /
          livenessProbe:
            httpGet:
              port: 5080
              path: /
          resources:
            # requests:
            #   cpu: 200m
            #   memory: 500Mi
            limits:
              cpu: 500m
              memory: 3Gi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-server
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:6ee77d99cc99003e213a9d346859a11df0650f9c730462f433071a5e2205349c
          ports:
            - containerPort: 81
            - containerPort: 82
            - containerPort: 83
          readinessProbe:
            # TODO: Implement gRPC health check instead. https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#probe-check-methods
            tcpSocket:
              port: 82
          # TODO: Enable `livenessProbe`.  Temporarily disabled to debug container crash issue.
          # livenessProbe:
          #   tcpSocket:
          #     port: 82
          resources:
            # requests:
            #   cpu: 500m
            #   memory: 1Gi
            #   ephemeral-storage: 3Gi
            limits:
              cpu: 1000m
              memory: 3Gi
              ephemeral-storage: 5Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
      imagePullSecrets:
        - name: gitlab-container-registry
  strategy:
    blueGreen:
      activeService: ppluto-main-service-active
      previewService: ppluto-main-service-preview
      autoPromotionEnabled: true
