auto_branch_pushes/sungbin/sec-fix/ppluto-main/overlays/dev_gcp/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - tickersbell.com
      - tickerbell.ai
      - wallstreet-now.com
      - supernews.io
      - wallstreetnow.co
      - super.news
      - supersearchx.com
      - www.projectpluto.co
      - openembedding.com
      - ppluto.dev
      - "*.auto-branch-pushes.ppluto-main.ppluto.dev"
      secretName: ingress-tls-secret
  rules:
    # tickerbell.ai
    - host: sungbin--sec-fix---tickerbell.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # wallstreet-now.com
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--sec-fix---wallstreetnow.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # supernews.io
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--sec-fix---supernews.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # wallstreetnow.co
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--sec-fix---wallstreetnow-co.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # super.news
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--sec-fix---super-news.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # TODO: For testing, remove?
    # tickersbell.com
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: tickersbell.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # TODO: For testing, remove?
    # test-1.supersearchx.com
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: test-1.ppluto.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /wsrvProxy
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-misc-service
                port:
                  number: 5088
          - path: /rss
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /sitemap
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # supersearchx.com
    - host: sungbin--sec-fix---supersearchx.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /wsrvProxy
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-misc-service
                port:
                  number: 5088
          - path: /rss
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /sitemap
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # projectpluto.co (Company website)
    - host: sungbin--sec-fix---projectpluto.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 8004
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-for-sticky"
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/service.sticky: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "gaia-session"
    # TODO: Migrate the following configs
    # alb.ingress.kubernetes.io/idle-timeout: "300" # idle timeout for ALB (TODO: reset to 60 and handle the long latency connection in the other way)
spec:
  tls:
    - hosts:
      - openembedding.com
      secretName: ingress-for-sticky-tls-secret
  rules:
    # openembedding.com (Project Gaia)
    - host: sungbin--sec-fix---gaia.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 8003
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
